<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <EditText
            android:id="@+id/adminTrainingDetailsNameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:inputType="text">

        <requestFocus/>
    </EditText>

    <Spinner
            android:id="@+id/adminTrainingDetailsTrainerSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_period"/>

    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


        <TextView
                android:id="@+id/adminTrainingDetailsPeriodView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/label_appointment"
                android:layout_weight="1"/>

        <Button
                android:id="@+id/adminTrainingDetailsPeriodEditButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/button_edit"/>
    </LinearLayout>

    <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_attendant"/>

    <ListView
            android:id="@+id/adminTrainingDetailsAttendantList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:choiceMode="singleChoice">
    </ListView>

</LinearLayout>