<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_eventContent"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

    <EditText
            android:id="@+id/trainingContentTextfield"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="0.5"
            android:ems="10"
            android:inputType="textMultiLine"
            android:gravity="top">

        <requestFocus/>
    </EditText>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_eventNode"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

    <EditText
            android:id="@+id/trainingNoteTextfield"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="0.5"
            android:ems="10"
            android:inputType="textMultiLine"
            android:gravity="top"/>

    <Button
            android:id="@+id/trainingSaveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_button"/>

</LinearLayout>